# investrog

./: .env-example  .gitignore  pyproject.toml  readme.MD
database/: postgres_client.py  qdrant_client.py
ingestion/: cdc_state.db  cdc_tracker.py  normalizer.py  pipeline.py  vector_indexer.py
