[project]
name = "investrog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.18.32",
]
